# timepix-calibration

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
data/assets/CLICpix2-1185_1_E1/: calibration_config.yaml  calibration_template.run
data/assets/CLICpix2-3826_4_B4/: calibration_config.yaml  matrix_totcnt_eq.cfg
data/assets/CLICpix2-973_1_E1/: calibration_config.yaml  matrix_totcnt_eq.cfg  matrix_totcnt_eq_masked_20230621.cfg
data/assets/CLICpix2-973_3_A1/: calibration_config.yaml  matrix_totcnt_eq.cfg
data/assets/H2M-10_3p6V_ikrum10/: calibration_config.yaml
data/assets/H2M-10_4p8V_ikrum10/: calibration_config.yaml
data/assets/H2M-2_1p2V_ikrum10/: calibration_config.yaml
data/assets/H2M-2_1p2V_ikrum21/: calibration_config.yaml
data/assets/H2M-2_3p6V_ikrum10/: calibration_config.yaml
data/assets/H2M-2_3p6V_ikrum21/: calibration_config.yaml
data/assets/H2M-3_1p2V_ikrum06/: calibration_config.yaml
data/assets/H2M-3_1p2V_ikrum10/: calibration_config.yaml
data/assets/H2M-3_1p2V_ikrum21/: calibration_config.yaml
data/assets/H2M-3_3p6V_ikrum10/: calibration_config.yaml
data/assets/H2M-5/: mask.csv  (+2 more)
data/corry/: alignment_dummy.geo  htcondor.sub  template.conf
etc/: setup_conda.sh  setup_corry.sh  setup_venv.sh
src/: config.py  extract_scan.py  extract_scans.py  extract_scans_h2m.py  histogram.py  measurement.py  plot_heatmap.py  plot_scans.py  process_scans.py  run_corry.py  utils.py
src/daq_preparation/: create_daq_script.py  create_daq_script_h2m.py  create_mask.py  create_masked_matrix.py
(+3107 files in other folders)
